[gd_scene load_steps=2 format=3 uid="uid://cr1tvl1q0k4y1"]

[ext_resource type="Script" path="res://addons/kamran_wali/code_opt_pro/cop_duplicate_object/cop_duplicate_object.gd" id="1_7no60"]

[node name="Duplicate Object" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7no60")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SceneContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="SceneLabel" type="Label" parent="MainContainer/SceneContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Scene: "

[node name="SceneStatusLabel" type="Label" parent="MainContainer/SceneContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 12
text = "some_box_packed_scene.tscn"

[node name="SceneLockButton" type="CheckButton" parent="MainContainer/SceneContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Lock"

[node name="ParentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="ParentPathLabel" type="Label" parent="MainContainer/ParentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Parent:   "

[node name="ParentStatus" type="Label" parent="MainContainer/ParentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 12
text = "InstantiateButton"

[node name="LockButton" type="CheckButton" parent="MainContainer/ParentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Lock"

[node name="NumberContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="NumberLabel" type="Label" parent="MainContainer/NumberContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Number of Duplication"

[node name="Input_Number" type="LineEdit" parent="MainContainer/NumberContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="InstantiateButton" type="Button" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Instantiate Object"

[connection signal="text_changed" from="MainContainer/NumberContainer/Input_Number" to="." method="_on_input_number_text_changed"]
[connection signal="pressed" from="MainContainer/InstantiateButton" to="." method="_on_duplicate_button_pressed"]
